@@ -138,11 +138,42 @@ let's run the full monty::
     E       assert 4 < 4
     
     test_compute.py:3: AssertionError
-    1 failed, 4 passed in 0.03 seconds
+    1 failed, 4 passed in 0.02 seconds
 
 As expected when running the full range of ``param1`` values
 we'll get an error on the last one.
 
+dynamically adding command line options
+--------------------------------------------------------------
+
+.. regendoc:wipe
+
+Through :confval:`addopts` you can statically add command line
+options for your project.  You can also dynamically modify
+the command line arguments before they get processed::
+
+    # content of conftest.py
+    import sys
+    def pytest_cmdline_processargs(args):
+        if 'xdist' in sys.modules: # pytest-xdist plugin
+            import multiprocessing
+            num = max(multiprocessing.cpu_count() / 2, 1)
+            args[:] = ["-n", str(num)] + args
+
+If you have the :ref:`xdist plugin <xdist>` installed
+you will now always perform test runs using a number
+of subprocesses close to your CPU. Running in an empty
+directory with the above conftest.py::
+
+    $ py.test
+    =========================== test session starts ============================
+    platform linux2 -- Python 2.6.5 -- pytest-2.0.1.dev3
+    gw0 I / gw1 I / gw2 I / gw3 I
+    gw0 [0] / gw1 [0] / gw2 [0] / gw3 [0]
+    
+    scheduling tests via LoadScheduling
+    
+    =============================  in 0.29 seconds =============================
 
 .. _`retrieved by hooks as item keywords`:
 
@@ -183,12 +214,12 @@ and when running it will see a skipped "slow" test::
 
     $ py.test -rs    # "-rs" means report details on the little 's'
     =========================== test session starts ============================
-    platform linux2 -- Python 2.6.5 -- pytest-2.0.0
+    platform linux2 -- Python 2.6.5 -- pytest-2.0.1.dev3
     collecting ... collected 2 items
     
     test_module.py .s
     ========================= short test summary info ==========================
-    SKIP [1] /tmp/doc-exec-479/conftest.py:9: need --runslow option to run
+    SKIP [1] /tmp/doc-exec-25/conftest.py:9: need --runslow option to run
     
     =================== 1 passed, 1 skipped in 0.02 seconds ====================
 
@@ -196,7 +227,7 @@ Or run it including the ``slow`` marked test::
 
     $ py.test --runslow
     =========================== test session starts ============================
-    platform linux2 -- Python 2.6.5 -- pytest-2.0.0
+    platform linux2 -- Python 2.6.5 -- pytest-2.0.1.dev3
     collecting ... collected 2 items
     
     test_module.py ..
